[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/tema-gui.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/BankControl.gd" type="Script" id=2]
[ext_resource path="res://Assets/BG/in-game/bank/1.png" type="Texture" id=3]
[ext_resource path="res://Assets/BG/in-game/bank/2.png" type="Texture" id=4]
[ext_resource path="res://Assets/GameObjects/in-game/controls/bank/Pilihan 1.png" type="Texture" id=5]
[ext_resource path="res://Assets/GameObjects/in-game/controls/bank/Pilihan 1 Klik.png" type="Texture" id=6]
[ext_resource path="res://Assets/GameObjects/in-game/controls/bank/Pilihan 3 Klik.png" type="Texture" id=7]
[ext_resource path="res://Assets/GameObjects/in-game/controls/bank/Pilihan 2.png" type="Texture" id=8]
[ext_resource path="res://Assets/GameObjects/in-game/controls/bank/Pilihan 2 Klik.png" type="Texture" id=9]
[ext_resource path="res://Assets/GameObjects/in-game/controls/bank/Pilihan 3.png" type="Texture" id=10]
[ext_resource path="res://Assets/Fonts/papercuts-2.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Assets/GameObjects/btn/Pilih.png" type="Texture" id=12]
[ext_resource path="res://Assets/GameObjects/btn/Pilih Klik.png" type="Texture" id=13]
[ext_resource path="res://Assets/GameObjects/btn/Close.png" type="Texture" id=14]
[ext_resource path="res://Assets/GameObjects/btn/Close Klik.png" type="Texture" id=15]
[ext_resource path="res://Assets/GameObjects/btn/Close Hover.png" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="DynamicFont" id=2]

size = 24
use_mipmaps = false
use_filter = false
font_data = ExtResource( 11 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="BankControl" type="Control"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Pause", "Theme" ]

[node name="bg" type="AnimatedSprite" parent="." index="0"]

position = Vector2( 512, 384 )
frames = SubResource( 1 )
animation = "default"
frame = 1
playing = true
_sections_unfolded = [ "Transform" ]

[node name="HBoxContainer" type="HBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 185.0
margin_top = 141.0
margin_right = 959.0
margin_bottom = 449.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 15
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="opsi1" type="TextureButton" parent="HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 248.0
margin_bottom = 308.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 7 )
_sections_unfolded = [ "Textures" ]

[node name="opsi2" type="TextureButton" parent="HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 263.0
margin_right = 510.0
margin_bottom = 308.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
texture_focused = ExtResource( 7 )
_sections_unfolded = [ "Textures" ]

[node name="opsi3" type="TextureButton" parent="HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 525.0
margin_right = 771.0
margin_bottom = 308.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_focused = ExtResource( 7 )
_sections_unfolded = [ "Textures" ]

[node name="Label" type="RichTextLabel" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 282.0
margin_top = 623.0
margin_right = 743.0
margin_bottom = 705.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.14902, 0.14902, 0.14902, 1 )
bbcode_enabled = true
bbcode_text = "Anda hendak meminjam koin sebesar $$$$
dalam waktu XX hari harus kembali. Yakin ?"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Anda hendak meminjam koin sebesar $$$$
dalam waktu XX hari harus kembali. Yakin ?"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "custom_colors" ]

[node name="btnPilih" type="TextureButton" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 756.0
margin_top = 637.0
margin_right = 932.0
margin_bottom = 703.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 13 )
_sections_unfolded = [ "Textures" ]

[node name="btnClose" type="TextureButton" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 927.0
margin_top = 53.0
margin_right = 977.0
margin_bottom = 103.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 16 )
_sections_unfolded = [ "Textures" ]

[node name="TabContainer" type="TabContainer" parent="." index="5"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 351.0
margin_top = 71.0
margin_right = 767.0
margin_bottom = 710.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
tab_align = 2
tabs_visible = true

[node name="Bank" type="Tabs" parent="TabContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 42.0
margin_right = -4.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
tab_align = 1
scrolling_enabled = true

[node name="Awal" type="VBoxContainer" parent="TabContainer/Bank" index="0"]

editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.5
margin_top = -163.0
margin_right = 139.5
margin_bottom = 163.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Mouse", "Theme" ]

[node name="BtnPinjam" type="Button" parent="TabContainer/Bank/Awal" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 279.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Pinjam Coin"
flat = false
align = 1
_sections_unfolded = [ "Mouse", "Theme" ]

[node name="BtnBayar" type="Button" parent="TabContainer/Bank/Awal" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 106.0
margin_right = 279.0
margin_bottom = 138.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Bayar Pinjaman"
flat = false
align = 1
_sections_unfolded = [ "Mouse", "Theme" ]

[node name="BtnStatus" type="Button" parent="TabContainer/Bank/Awal" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 188.0
margin_right = 279.0
margin_bottom = 220.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Lihat Status"
flat = false
align = 1
_sections_unfolded = [ "Mouse", "Theme" ]

[node name="BtnKeluar" type="Button" parent="TabContainer/Bank/Awal" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 270.0
margin_right = 279.0
margin_bottom = 302.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Kembali"
flat = false
align = 1
_sections_unfolded = [ "Mouse", "Theme" ]

[node name="Pinjam" type="VBoxContainer" parent="TabContainer/Bank" index="1"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -163.5
margin_right = 150.0
margin_bottom = 216.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Mouse", "Theme" ]

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Bank/Pinjam" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 290.0
margin_bottom = 192.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
bbcode_enabled = false
bbcode_text = "Koin yang dipinjam:
5000
Pembayaran setiap 1 hari sebesar 500 Koin, Setuju ?"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Koin yang dipinjam:
5000
Pembayaran setiap 1 hari sebesar 500 Koin, Setuju ?"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Size Flags" ]

[node name="BtnDoPinjam" type="Button" parent="TabContainer/Bank/Pinjam" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 242.0
margin_right = 290.0
margin_bottom = 286.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Pinjam!"
flat = false
align = 1
_sections_unfolded = [ "Theme" ]

[node name="BtnKembali" type="Button" parent="TabContainer/Bank/Pinjam" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 336.0
margin_right = 290.0
margin_bottom = 380.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "< Kembali"
flat = false
align = 1
_sections_unfolded = [ "Theme" ]

[connection signal="pressed" from="btnClose" to="." method="_on_btnKeluar_pressed"]

[connection signal="pressed" from="TabContainer/Bank/Awal/BtnPinjam" to="." method="_on_BtnPinjam_pressed"]

[connection signal="pressed" from="TabContainer/Bank/Awal/BtnKeluar" to="." method="_on_BtnKeluar_pressed"]

[connection signal="pressed" from="TabContainer/Bank/Pinjam/BtnKembali" to="." method="_on_BtnKembali_pressed"]


